添加本项目的模块到依赖管理bom